--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <title>Fenda do Bikini</title>
 </head>
 <body>
-    
+    <nav>
+        <img src="../Julia_S1D04_Responsividade/img/BurguerIconG.png" alt="BurguerIconG">
+        <div>
+          <span></span>
+          <span></span>
+         <span></span> 
+        </div>
+    </nav>
 </body>
 </html>
