--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,15 +8,44 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Fenda do Bikini</title>
 </head>
+
 <body>
     <nav>
         <img src="../Julia_S1D04_Responsividade/img/BurguerIconG.png" alt="BurguerIconG">
         <div>
-          <span></span>
-          <span></span>
-         <span></span> 
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
     </nav>
+
     <header></header>
+
+    <main>
+        <h1>Delivery de Hamburguer de Siri</h1>
+        <p>O nosso delicioso hamburguer de Siri, <b>único</b> da Fenda do Bikini, na sua casa com um <b>clique</b>!</p>
+    </main>
+
+    <section>
+        <h2>Nossa Equipe</h2>
+        <div class="funcionarios">
+            <div>
+                <h3>Esquila</h3>
+            <img src="../Julia_S1D04_Responsividade/img/EsquiloBob.jpg" alt="Esquilo">
+            </div>
+
+            <div>
+                <h3>Bob Esponja</h3>
+                <img src="../Julia_S1D04_Responsividade/img/BobEspatula.png" alt="Bob">
+            </div>
+            
+            <div>
+                 <h3>Patrick Estrela</h3>
+                 <img src="../Julia_S1D04_Responsividade/img/patrick.png" alt="patrick">
+             </div>
+        <div>
+                
+    </section>
 </body>
+
 </html>
